# cliptime

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  QUICKSTART.md  README.md  docker-compose.yml  init.sql  setup_instructions.md  start.sh
backend/: .coverage  Dockerfile  pyproject.toml
backend/fixtures/riverside-framing/: README.md
backend/migrations/: 001_add_progress_fields.sql  002_ensure_core_columns.sql  003_remove_monetization.sql  004_add_emphasis_words.sql
backend/scripts/: benchmark_riverside.py  measure_riverside_captions.py  smoke_dual_tier.py  verify_tight_cut_subtitles.py
backend/src/: admin_auth.py  ai.py  ass_captions.py  assemblyai_compat.py  caption_templates.py  clip_editor.py  config.py  database.py  file_cleanup.py  font_registry.py  layout_director.py  main_refactored.py  models.py  redis_client.py  speaker_panels.py  storage_stats.py  subtitle_compositor.py  tight_cuts.py  timestamp_parse.py  transcript_signals.py  transcript_windows.py  video_utils.py
backend/src/api/: deps.py
backend/src/repositories/: cache_repository.py  clip_repository.py  task_repository.py
backend/src/services/: task_service.py  video_service.py
backend/src/workers/: progress.py  tasks.py
backend/tests/: conftest.py  test_subtitle_shadows.py  test_video_utils_diarization.py
backend/tests/fixtures/: factories.py
backend/tests/integration/: test_health_and_tasks.py
backend/tests/unit/: test_ai_dual_tier.py  test_ai_prompt.py  test_ai_query_match.py  test_api_deps.py  test_assemblyai_compat.py  test_caption_templates_api.py  test_tight_cuts.py  (+23 more)
(+139 files in other folders)
