[project]
name = "supoclip-backend"
version = "0.1.0"
description = "Python-based backend for SupoClip"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic-ai>=0.4.9",
    "setuptools-rust>=1.11.1",
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.25",
    "python-dotenv>=1.0.0",
    "greenlet>=2.0.0",
    "moviepy>=2.2.1",
    "opencv-python>=4.8.0",
    "assemblyai>=0.64.0",
    "srt>=3.5.3",
    "mediapipe>=0.10.0",
    "numpy>=1.24.0",
    "aiofiles>=23.2.0",
    "sse-starlette>=1.6.5",
    "arq>=0.26.0",
    "redis>=5.0.0",
    "requests>=2.32.0",
    "psutil>=5.9.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
addopts = """
--cov=src.auth_headers
--cov=src.api.deps
--cov=src.api.routes.models
--cov-report=term-missing
--cov-report=html
--cov-fail-under=65
"""
